# storage-management

./: .env.example  Dockerfile  README.md  pyproject.toml  schema.sql  storage.session.sql
.github/: dependabot.yml
.github/workflows/: codeql.yml
coordinator/: .buffalo.dev.yml  Dockerfile  database.yml  go.mod  go.sum  main.go
coordinator/actions/: app.go  areas.go  areas_test.go  notifications.go  notifications_test.go  spots.go  spots_test.go  tickets.go  tickets_test.go  users.go
coordinator/config/: buffalo-app.toml
coordinator/grifts/: init.go
coordinator/migrations/: 20220206022035_create_areas.down.fizz  20220206022035_create_areas.up.fizz  20220206022950_create_spots.down.fizz  20220206022950_create_spots.up.fizz  20220206023132_create_users.up.fizz  20220206023441_create_tickets.up.fizz  20220207030036_create_notifications.up.fizz
coordinator/models/: area.go  area_test.go  notification.go  notification_test.go  spot.go  spot_test.go  ticket.go  ticket_test.go  user.go
coordinator/templates/areas/: create.plush.html  index.plush.html  show.plush.html
docs/: rfid_lookup.md
storage_management/: asgi.py  settings.py  urls.py  wsgi.py
storage_management/coordinator/: admin.py  apps.py  models.py  serializers.py  utils.py  views.py
storage_management/coordinator/migrations/: 0001_initial.py  0002_rename__id_area_id_rename__id_member_id_and_more.py  0003_alter_member_banned_until_alter_ticket_finished_at.py  0004_alter_member_banned_until.py  0005_alter_notification_ticket_alter_spot_area_and_more.py  0007_ticket_unique_spot.py  (+1 more)
